--- a/index.html
+++ b/index.html
@@ -68,24 +68,44 @@
           <h2 class="selector">особенность</h2>
           <ul class="list features-list">
             <li class="features-items">
+              <div class="features-items-icon">
+                <svg class="contacts-link-icon tel" width="70" height="70">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="features-items">
+              <div class="features-items-icon">
+                <svg class="contacts-link-icon tel" width="70" height="70">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="features-items">
+              <div class="features-items-icon">
+                <svg class="contacts-link-icon tel" width="70" height="70">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="features-items">
+              <div class="features-items-icon">
+                <svg class="contacts-link-icon tel" width="70" height="70">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -118,40 +138,259 @@
               <img width="270" src="./images/pi(1).jpg" alt="Игорь Демьяненко" />
               <h3 class="team-people">Игорь Демьяненко</h3>
               <p class="team-text">Product Designer</p>
+              <ul class="list team-list-icons">
+                <li class="team-item-icons">
+                  <a href="" class="team-item-link">
+                    <svg class="team-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-item-icons">
+                  <a href="" class="team-item-link">
+                    <svg class="team-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="team-item-icons">
+                  <a href="" class="team-item-link">
+                    <svg class="team-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="team-item-icons">
+                  <a href="" class="team-item-link">
+                    <svg class="team-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img width="270" src="./images/pi(2).jpg" alt="Ольга Репина" />
               <h3 class="team-people">Ольга Репина</h3>
               <p class="team-text">Frontend Developer</p>
+              <ul class="list team-list-icons">
+                <li class="team-item-icons">
+                  <a href="" class="team-item-link">
+                    <svg class="team-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-item-icons">
+                  <a href="" class="team-item-link">
+                    <svg class="team-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="team-item-icons">
+                  <a href="" class="team-item-link">
+                    <svg class="team-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="team-item-icons">
+                  <a href="" class="team-item-link">
+                    <svg class="team-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img width="270" src="./images/pi(3).jpg" alt="Николай Тарасов" />
               <h3 class="team-people">Николай Тарасов</h3>
               <p class="team-text">Marketing</p>
+              <ul class="list team-list-icons">
+                <li class="team-item-icons">
+                  <a href="" class="team-item-link">
+                    <svg class="team-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-item-icons">
+                  <a href="" class="team-item-link">
+                    <svg class="team-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="team-item-icons">
+                  <a href="" class="team-item-link">
+                    <svg class="team-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="team-item-icons">
+                  <a href="" class="team-item-link">
+                    <svg class="team-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img width="270" src="./images/pi(4).jpg" alt="Михаил Ермаков" />
               <h3 class="team-people">Михаил Ермаков</h3>
               <p class="team-text">UI Designer</p>
+              <ul class="list team-list-icons">
+                <li class="team-item-icons">
+                  <a href="" class="team-item-link">
+                    <svg class="team-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-item-icons">
+                  <a href="" class="team-item-link">
+                    <svg class="team-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="team-item-icons">
+                  <a href="" class="team-item-link">
+                    <svg class="team-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="team-item-icons">
+                  <a href="" class="team-item-link">
+                    <svg class="team-social-link" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
       </section>
     </main>
 
+    <!-- Постоянные клиенты -->
+    <section class="section">
+      <div class="container">
+        <h2 class="client-title">Постоянные клиенты</h2>
+        <ul class="list client-items">
+          <li>
+            <a class="client-item-link" href="">
+              <svg class="client-item-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="client-item-link" href="">
+              <svg class="client-item-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="client-item-link" href="">
+              <svg class="client-item-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-3"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="client-item-link" href="">
+              <svg class="client-item-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-4"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="client-item-link" href="">
+              <svg class="client-item-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-5"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="client-item-link" href="">
+              <svg class="client-item-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-6"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <!-- подвал -->
     <footer class="footer">
       <div class="container footer-container">
-        <a class="header-logo link" href="./">Web<span class="footer-logo-text">Studio</span></a>
-        <address class="footer-addres">г. Киев, пр-т Леси Украинки, 26</address>
-        <ul class="list footer-list">
+        <ul class="list footer-list-container">
           <li>
-            <a class="link footer-communication" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="header-logo link" href="./"
+              >Web<span class="footer-logo-text">Studio</span></a
             >
+            <address class="footer-addres">г. Киев, пр-т Леси Украинки, 26</address>
+            <ul class="list footer-list">
+              <li>
+                <a class="link footer-communication" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="link footer-communication" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
           </li>
-          <li>
-            <a class="link footer-communication" href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="footer-social-item">
+            <h3 class="footer-social">присоединяйтесь</h3>
+            <ul class="list team-list-icons">
+              <li class="team-item-icons">
+                <a href="" class="team-item-link footer-social-color">
+                  <svg class="team-social-link team-social-link-color" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-item-icons">
+                <a href="" class="team-item-link footer-social-color">
+                  <svg class="team-social-link team-social-link-color" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-item-icons">
+                <a href="" class="team-item-link footer-social-color">
+                  <svg class="team-social-link team-social-link-color" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="team-item-icons">
+                <a href="" class="team-item-link footer-social-color">
+                  <svg class="team-social-link team-social-link-color" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
         </ul>
       </div>
