--- a/index.html
+++ b/index.html
@@ -39,13 +39,20 @@
         <div class="header-connect">
           <ul class="list header-communication">
             <li class="header-item-communication">
-              <a class="link header-communication-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+              <a class="link header-communication-link" href="mailto:info@devstudio.com">
+                <svg class="contacts-items-link" width="16" height="12">
+                  <use href="./images/icons.svg#icon-email"></use>
+                </svg>
+
+                info@devstudio.com</a
               >
             </li>
             <li class="header-item-communication">
               <a class="link header-communication-link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
+                ><svg class="contacts-items-link" width="10" height="16">
+                  <use href="./images/icons.svg#icon-tel"></use>
+                </svg>
+                +38 096 111 11 11</a
               >
             </li>
           </ul>
@@ -55,7 +62,7 @@
 
     <main>
       <!--Заголовок-->
-      <section class="hero section">
+      <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="hero-button" type="button">Заказать услугу</button>
