--- a/portfolio.html
+++ b/portfolio.html
@@ -27,9 +27,9 @@
         <a class="link header-logo" href="./"> Web<span class="header-logo-text">Studio</span></a>
         <nav class="header-nav">
           <ul class="list header-list">
-            <li class="header-item"><a class="link header-link active" href="./">Студия</a></li>
+            <li class="header-item"><a class="link header-link" href="./">Студия</a></li>
             <li class="header-item">
-              <a class="link header-link" href="./portfolio.html">Портфолио</a>
+              <a class="link header-link active" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="header-item">
               <a class="link header-link" href="">Контакты</a>
